crates-next/otter-vm/tests/compile_fail/branded_weak_cross_isolate_rejected.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/compile_fail/branded_weak_cross_isolate_rejected.rs:12:21
   |
 9 |         let weak = left_session.weak(otter_gc::Gc::<otter_gc::test_support::OpaqueLeaf>::null());
   |             ---- `weak` declared here, outside of the closure body
10 |
11 |         otter_gc::with_gc_session(&mut right, |right_session| {
   |                                                ------------- `right_session` is a reference that is only valid in the closure body
12 |             let _ = weak.upgrade(&right_session);
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `right_session` escapes the closure body here
   |
   = note: requirement occurs because of the type `otter_gc::Weak<'_, OpaqueLeaf>`, which makes the generic argument `'_` invariant
   = note: the struct `otter_gc::Weak<'iso, T>` is invariant over the parameter `'iso`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error[E0521]: borrowed data escapes outside of closure
  --> tests/compile_fail/branded_weak_cross_isolate_rejected.rs:12:21
   |
 8 |     otter_gc::with_gc_session(&mut left, |left_session| {
   |                                           ------------
   |                                           |
   |                                           `left_session` is a reference that is only valid in the closure body
   |                                           has type `GcSession<'1, '_>`
...
12 |             let _ = weak.upgrade(&right_session);
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                     |
   |                     `left_session` escapes the closure body here
   |                     argument requires that `'1` must outlive `'static`
